2005-12-06  Serge Chatroux  <serge.chatroux@st.com>

	* mi/mi-interp.c (mi_interpreter_resume): Route target error
	through the MI.

2005-12-04  Mark Kettenis  <kettenis@gnu.org>

	* amd64obsd-tdep.c: Include "regcache.h" and "bsd-uthread.h".
	(amd64obsd_uthread_reg_offset): New variable.
	(AMD64OBSD_UTHREAD_RSP_OFFSET): New define.
	(amd64obsd_supply_uthread, amd64obsd_collect_uthread): New
	functions.
	(amd64obsd_init_abi): Set supply_uthread and collect_uthread.
	* Makefile.in (amd64obsd-tdep.o): Update dependencies.

2005-12-02  Andrew Stubbs  <andrew.stubbs@st.com>

	* breakpoint.c (BREAK_ARGS_HELP): New mecro.
	(_initialize_breakpoint): Enhance break, tbreak, hbreak and thbreak
	commands' help by adding more information and using BREAK_ARGS_HELP
	to duplicate the common parts.  Remove now-redundant cross-references.

2005-12-02  Andrew Stubbs  <andrew.stubbs@st.com>

	* value.c (init_if_undefined_command): New function.
	(_initialize_values): Add command init-if-undefined.
	* NEWS (Changes since GDB 6.3): Rename to 'Changes in GDB 6.4'.
	(Changes since GDB 6.4): New section.
	Mention new command init-if-undefined.

2005-12-02  Andrew Stubbs  <andrew.stubbs@st.com>

	* symfile.c (symbol_file_clear): Test symfile_objfile is not NULL
	before dereferencing it.
	Gettextize the query.

2005-12-02  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.4 released from GDB 6.4 branch.

2005-12-01  Nathan Sidwell  <nathan@codesourcery.com>

	* ms1-tdep.c (ms1_register_name): Const qualify array.
	(ms1_registers_info): Use gdb_byte.
	(ms1_push_dummy_call): Likewise.
	(ms1_gdbarch_init): Remove illformed nested prototype.

2005-11-25  Christophe Lyon  <christophe.lyon@st.com>

	* dwarf2-frame.c (dwarf2_frame_prev_register): Handle
	DWARF2_FRAME_REG_CFA_OFFSET.
	* dwarf2-frame.h (enum dwarf2_frame_reg_rule): Add
	DWARF2_FRAME_REG_CFA_OFFSET.

2005-11-28  Mark Mitchell  <mark@codesourcery.com>

	* remote-sim.c (gdbsim_wait): Pass target signal numbers to