@@ -1,3 +1,7 @@
+2005-12-06  Michael Snyder  <msnyder@redhat.com>
+
+	* inf-ptrace.c: Fix typos in comments.
+
 2005-12-06  Serge Chatroux  <serge.chatroux@st.com>
 
 	* mi/mi-interp.c (mi_interpreter_resume): Route target error
